# pic64gx-zephyr-examples

./: .gitignore  README.md  west.yml
apps/: README.md
apps/amp_example/: CMakeLists.txt  prj.conf  sample.yaml
apps/amp_example/boards/: linker_overlay.ld  pic64gx_curiosity_kit.overlay
apps/amp_example/src/application/: CMakeLists.txt
apps/amp_example/src/application/inc/: demo_main.h  miv_ihc_config.h  mss_extra_sw_config.h  rpmsg_config.h
apps/amp_example/src/application/src/: console_demo.c  demo_main.c  pingpong_demo.c  sample_echo_demo.c
apps/amp_example/src/miv_ihc/: miv_ihc.c  miv_ihc.h  miv_ihc_regs.h  miv_ihc_reset_defaults.h  miv_ihc_types.h  miv_ihc_version.h  uint_32_bit_masks.h
apps/amp_example/src/remoteproc/: remoteproc.c
apps/amp_example_openamp/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
apps/amp_example_openamp/boards/: pic64gx_curiosity_kit.conf  pic64gx_curiosity_kit.overlay  pic64gx_curiosity_kit_pic64gx1000_u54.conf  pic64gx_curiosity_kit_pic64gx1000_u54.overlay
apps/amp_example_openamp/src/: main_remote.c
apps/blinky/boards/: pic64gx_curiosity_kit.overlay
apps/blinky_amp/: prj.conf
apps/blinky_amp/boards/: pic64gx_curiosity_kit.overlay
apps/button/: prj.conf
apps/button/boards/: pic64gx_curiosity_kit.overlay
payload-configs/: single_hart_ddr.yaml  single_hart_ddr_emu_amp.yaml  single_hart_scratchpad.yaml  smp_ddr.yaml  smp_scratchpad.yaml
scripts/: flash_payload.py  generate_payload.py  requirements.txt  west-commands.yml  write_to_emmc.py
zephyr/: module.yml
